--- a/lalafell/src/main/cpp/CMakeLists.txt
+++ b/lalafell/src/main/cpp/CMakeLists.txt
@@ -17,7 +17,7 @@ set(LIB_LIVE_PLAYER_HEADERS
         decoder/h264_hw_decoder.h
         renderer/gl_renderer.h
         extractor/rtmp_extractor.h
-        live_player.h)
+        lalafell_player.h)
 
 set(LIB_LIVE_PLAYER_SOURCES
         util/thread.cpp
@@ -26,7 +26,7 @@ set(LIB_LIVE_PLAYER_SOURCES
         decoder/h264_hw_decoder.cpp
         extractor/rtmp_extractor.cpp
         renderer/gl_renderer.cpp
-        live_player.cpp
+        lalafell_player.cpp
         live_player_jni.cpp)
 
 set(ANDROID_LIB android log mediandk GLESv2 EGL)
