rename recorder module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     //implementation project(':lalafell_player')
-    implementation project(':lalafell_record')
+    implementation project(':lalafell_recorder')
 }
